--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,15 @@
 
+@import 'codemirror/lib/codemirror.css';
+
+html {
+	min-height: 100%;
+}
+
 body {
 	background: #f5f5f5;
+	min-height: 800px;
+}
+
+#root {
+	min-height: 800px;
 }
